# fdic-bank-health-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  decommission.yml  deploy_dashboard.yml  refresh_data.yml  refresh_quarterly.yml  refresh_weekly.yml  tableau_twbx.yml  v2_dashboard_check.yml  v2_ingest.yml  v2_validate.yml
analysis/: ab.py  sample_experiment.py
dashboard/: evidence.config.yaml  package.json
dashboard/pages/: +layout.svelte  backtest-2023.md  bank-profile.md  data-quality.md  index.md  outlier-screen.md  peer-explorer.md  product-analytics.md  static-build-check.md
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: ga4_events.sql
dbt/tests/: assert_assistance_not_marked_failed.sql  assert_equity_to_assets_in_range.sql  assert_ga4_attribution_conserves_purchases.sql  assert_ga4_funnel_is_monotonic.sql  assert_ga4_retention_bounded.sql  assert_one_band_per_bank_quarter.sql  assert_robust_z_is_winsorized.sql
docs/: backlog.md  backtest_method.md  data_quality.md  data_quality_log.md  decisions.md  event_dictionary.md  experiment_sample.md  fdic_failure_properties.yaml  fdic_institution_properties.yaml  fdic_risview_properties.yaml  fdic_swagger.yaml  fred_h8_series.md  gcp_setup.md  looker_build.md  migration_notes.md  migration_validation.md  powerbi_build.md  tableau_build.md  verification.md
docs/backtest/: false_positive_sample.csv  labeled_banks.csv  ranked_full.csv
docs/verification_exports/: Heritage_Bank__Inc__33119_Quarterly_Assets_Past_Five_Years_7_3_2026.csv  (+2 more)
forecasting/: bqml.py  h8_forecast.py  methods.py
ingestion/: bq.py  cache.py  client.py  config.py  db.py  fdic_failures.py  fdic_financials.py  fdic_institutions.py  fred_h8.py  run_all.py
orchestration/: README.md  docker-compose.yml
orchestration/dags/: fdic_ingestion.py
reporting/: excel_report.py  tableau_sheet.py
scripts/: build_ci_fixture.py  build_ci_warehouse.py  build_site_meta.py  check_new_quarter.py  ci_cleanup.py  export_dashboard_db.py  mart_parity_check.py  motherduck_snapshot.py  raw_parity_check.py  run_backtest.py
tableau/: build_twb.py  build_twbx.py  fdic_peer_satellite.twb
tests/: test_ab.py  test_backtest_freeze.py  test_bq.py  test_cache.py  test_check_new_quarter.py  test_db.py  test_excel_report.py  test_forecasting.py  test_ingestion.py  test_mart_parity.py  test_raw_parity.py  test_sanity.py  test_tableau_sheet.py
(+41 files in other folders)
