[project]
name = "fdic-bank-health-monitor"
version = "0.1.0"
description = "Automated analytics platform tracking the financial health of US banks on FDIC public data"
# 3.14 excluded: dbt-core requires <3.14 until dbt v2.0 (see README "Decisions")
requires-python = ">=3.11,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Defaults (pycodestyle errors, pyflakes) + import sorting, bugbear, pyupgrade
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
