[project]
name = "fdic-bank-health-monitor"
version = "0.1.0"
description = "Automated analytics platform tracking the financial health of US banks on FDIC public data"
# 3.14 excluded: dbt-core requires <3.14 until dbt v2.0 (see README "Decisions")
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-bigquery>=1.11.3",
    "dbt-core>=1.11.12",
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-storage>=3.1.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Defaults (pycodestyle errors, pyflakes) + import sorting, bugbear, pyupgrade
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
